--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Hello, World!</title>
+    <title>RachelVaidya</title>
 </head>
-<body>Hello, World!</body>
+<body>Rachel Vaidya</body>
 </html>
