--- a/index.html
+++ b/index.html
@@ -4,5 +4,19 @@
     <meta charset="utf-8">
     <title>RachelVaidya</title>
 </head>
-<body>Rachel Vaidya</body>
+<body>
+
+<h1>Rachel Vaidya</h1>
+
+<o1>
+    <li>Biography</li>
+    <li>Blog</li>
+    <li>Pictures</li>
+    <li>buy my merch</li>
+    <li>Contact me</li>
+</o1>
+
+<img>
+
+</body>
 </html>
