--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>RachelVaidya</title>
 </head>
-<body>
+<body bgcolor="9FD6FA">
 
 <h1>Rachel Vaidya</h1>
 
@@ -12,7 +12,7 @@
     <li>Biography</li>
     <li>Blog</li>
     <li>Pictures</li>
-    <li>buy my merch</li>
+    <li>Buy my merch</li>
     <li>Contact me</li>
 </o1>
 
