links and picture

--- a/index.html
+++ b/index.html
@@ -2,21 +2,30 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>RachelVaidya</title>
+    <title id="myname">RachelVaidya</title>
+
 </head>
 <body bgcolor="9FD6FA">
 
 <h1>Rachel Vaidya</h1>
 
 <o1>
-    <li>Biography</li>
-    <li>Blog</li>
-    <li>Pictures</li>
-    <li>Buy my merch</li>
+    <li>About me</li>
+
+    <p> I am a first-year student at Occidental College. I am from Chicago and I will be majoring in Economics.
+    <div>Currently, my favorite music artist is Khalid. This is his latest album:<a href="https://www.youtube.com/watch?v=z6buCeA4ZSc&list=PLxKHVMqMZqUTQMH3qG1mSO6fSoMJblhBt"> Free Spirit.</a> </div>
+    </p>
+
+    <li><a href="https://www.youtube.com/channel/UCmh5gdwCx6lN7gEC20leNVA">My favorite vlogs</a></li>
+
+    <li><a href="https://www.google.com/search?q=cute+dogs&rlz=1C1CHBF_enUS810US810&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjksNKIwsjhAhWVvZ4KHYfWBdUQ_AUIDigB&biw=1280&bih=578">My favorite pictures</a></li>
+
+    <li><a href="https://fanjoy.co/collections/david-dobrik">Buy merch</a></li>
+
     <li>Contact me</li>
 </o1>
 
-<img>
+<img src="savedpicures/rachelpalmtree">
 
 </body>
 </html>
