font and font color

--- a/index.html
+++ b/index.html
@@ -3,26 +3,39 @@
 <head>
     <meta charset="utf-8">
     <title id="myname">RachelVaidya</title>
-
+    <style>
+        h1 {color: white;
+        font-family: georgia;}
+        li {color: navy;
+        font-family: georgia}
+        p {font-family: georgia}
+        div {font-family: georgia}
+    </style>
 </head>
 <body bgcolor="9FD6FA">
 
 <h1>Rachel Vaidya</h1>
 
 <o1>
-    <li>About me</li>
+    <li><b>About me</b></li>
 
-    <p> I am a first-year student at Occidental College. I am from Chicago and I will be majoring in Economics.
-    <div>Currently, my favorite music artist is Khalid. This is his latest album:<a href="https://www.youtube.com/watch?v=z6buCeA4ZSc&list=PLxKHVMqMZqUTQMH3qG1mSO6fSoMJblhBt"> Free Spirit.</a> </div>
+    <p>
+    <div> I am a first-year student at Occidental College.</div>
+    <div>I am from Chicago and I will be majoring in Economics.</div>
+    <div>Currently, my favorite music artist is Khalid. This is his latest album:<a href="https://www.youtube.com/watch?v=z6buCeA4ZSc&list=PLxKHVMqMZqUTQMH3qG1mSO6fSoMJblhBt"style="color: navy"> Free Spirit.</a> </div>
     </p>
 
-    <li><a href="https://www.youtube.com/channel/UCmh5gdwCx6lN7gEC20leNVA">My favorite vlogs</a></li>
+    <li><b><a href="https://www.youtube.com/channel/UCmh5gdwCx6lN7gEC20leNVA"style="color: navy">My favorite vlogs
+    </a></b></li>
 
-    <li><a href="https://www.google.com/search?q=cute+dogs&rlz=1C1CHBF_enUS810US810&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjksNKIwsjhAhWVvZ4KHYfWBdUQ_AUIDigB&biw=1280&bih=578">My favorite pictures</a></li>
+    <p></p>
 
-    <li><a href="https://fanjoy.co/collections/david-dobrik">Buy merch</a></li>
-
-    <li>Contact me</li>
+    <li><b><a href="https://www.google.com/search?q=cute+dogs&rlz=1C1CHBF_enUS810US810&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjksNKIwsjhAhWVvZ4KHYfWBdUQ_AUIDigB&biw=1280&bih=578"style="color: navy">My favorite pictures</a></b></li>
+    <p></p>
+    <li><b><a href="https://fanjoy.co/collections/david-dobrik"style="color: navy">Buy merch</a></b></li>
+    <p></p>
+    <li><b>Contact me</b></li>
+    <p> Phone: xxx-xxx-xxxx</p>
 </o1>
 
 <img src="savedpicures/rachelpalmtree">
