--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p> Phone: xxx-xxx-xxxx</p>
 </o1>
 
-<img src="savedpicures/rachelpalmtree">
+<img src="rachel.jpg" alt="mypicture" height="400" width="200" algiht="right">
 
 </body>
 </html>
