--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         div {font-family: georgia}
     </style>
 </head>
+<img src="rachel.jpg.jpg" alt="mypicture" height="550" width="400" align="right">
+
 <body bgcolor="9FD6FA">
 
 <h1>Rachel Vaidya</h1>
@@ -38,7 +40,7 @@
     <p> Phone: xxx-xxx-xxxx</p>
 </o1>
 
-<img src="rachel.jpg" alt="mypicture" height="400" width="200" algiht="right">
+
 
 </body>
 </html>
